auth-be & socket-fe push

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 node_modules
 dist
 .env
-/.pnp
+.pnp
 .pnp.js
 .yarn/install-state.gz
 
 # testing
-/coverage
+coverage
 
 # next.js
-/.next/
-/out/
+.next
+out
 
 # production
-/build
+build
 
 # misc
 .DS_Store
